# steep

./: .gitignore  AGENTS.md  README.md  SOUL.md  TOOLS.md  USER.md  pyproject.toml
config/: digest.yaml  example.env  newsletter-allowlist.yaml
deploy/: steep-digest.service  steep-digest.timer
docs/: nanoclaw-runbook.md
docs/superpowers/specs/: 2026-04-08-steep-newsletter-digest-design.md
etc/steep/: allowlist.yaml
integrations/container/: Dockerfile.steep-agent
integrations/nanoclaw/: README.md  mount-allowlist.steep.example.json  register_steep_digest_task.py  registered-groups-steep-mount.fragment.json  steep-digest-task-script.sh
src/steep_digest/: __init__.py  __main__.py  allowlist.py  cli.py  compose_render.py  config_load.py  cursor.py  deliver.py  digest_schema.py  extract.py  gmail_ingest.py  gmail_service.py  llm_digest.py  paths.py
steep_digest/: __init__.py  __main__.py  allowlist.py  cli.py  gmail_client.py  llm.py  render.py  settings.py  state.py  telegram.py
tests/: test_allowlist.py  test_compose_chunk.py
