[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steep-digest"
version = "0.1.0"
description = "Daily newsletter digest: Gmail → LLM buckets → email + Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
steep-digest = "steep_digest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["steep_digest"]

[tool.ruff]
line-length = 100
target-version = "py311"
